RDM-8788 - Cleanup and JVM args for Hazelcast